--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
         left: 0;
         position: fixed;
         background: var(--header-overlay), url(banner.png); 
-        background-size:auto 100%;
+        background-size:auto auto;
         background-position:  center top;
         background-attachment: fixed;
         background-repeat: no-repeat;
